@@ -1,5 +1,8 @@
 2008-06-21  Michael Snyder  <msnyder@specifix.com>
 
+	* gdbfreeplay-back.c: Clean up round, comments, remove #if 0 etc.
+	* gdbfreeplay-i386.c: Ditto.
+
 	* gdbfreeplay-i386.c (target_pc_from_g): Accept a char * instead
 	of a FILE *.
 	* gdbfreeplay.h (target_pc_from_g): Change prototype.
